...
                                <color key="backgroundColor" red="0.73333333329999995" green="0.0019310983707021894" blue="0.56318024254760291" alpha="0.69539221938775508" colorSpace="custom" customColorSpace="displayP3"/>
                                <constraints>
                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="28" id="fIE-hM-Ab0"/>
                                    <constraint firstAttribute="height" constant="28" id="vaZ-df-xh8"/>
                                </constraints>
                                <segments>
                                    <segment title="Scale"/>
                                    <segment title="Evaporate"/>
                                    <segment title="Fall"/>
                                    <segment title="Pixelate"/>
                                    <segment title="Sparkle"/>
                                    <segment title="Burn"/>
                                    <segment title="Anvil"/>
                                </segments>
                                <color key="selectedSegmentTintColor" red="0.73333333329999995" green="0.0039215686269999999" blue="0.56470588239999997" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
...
                                <connections>
                                    <action selector="changeFontSize:" destination="3ei-2r-m0A" eventType="valueChanged" id="RPG-Ij-VXw"/>
                                </connections>
                            </slider>
                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="I'm LTMorphingLabel. Tap Me Please." textAlignment="center" lineBreakMode="tailTruncation" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fqc-dc-WVn" customClass="LTMorphingLabel" customMo
                                <rect key="frame" x="20" y="52" width="627" height="203"/>
                                <accessibility key="accessibilityConfiguration" identifier="morphingLabel" label="morphingLabel"/>
                                <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="26"/>
                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <nil key="highlightedColor"/>
                                <size key="shadowOffset" width="0.0" height="3"/>
                            </label>
                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lO7-Hn-KaX">
...
                            <constraint firstItem="rE7-Va-JH8" firstAttribute="top" secondItem="fqc-dc-WVn" secondAttribute="bottom" constant="20" id="k9Z-OZ-VrU"/>
                            <constraint firstItem="3VJ-mH-2Xe" firstAttribute="trailing" secondItem="D5d-Wo-IoW" secondAttribute="trailingMargin" id="o8d-0t-cq2"/>
                            <constraint firstItem="upB-mu-6Xz" firstAttribute="trailing" secondItem="lO7-Hn-KaX" secondAttribute="trailing" constant="24" id="oPt-lM-mnb"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="LTMorphingLabel Demo" id="A7j-8h-CTu">
                        <barButtonItem key="rightBarButtonItem" title="Clear" id="Bsc-Fz-3C2">
                            <color key="tintColor" red="1" green="0.0" blue="0.78291556679999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                            <connections>
                                <action selector="clear:" destination="3ei-2r-m0A" id="JHT-bA-GcN"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
